# mattermost-crawler

./: .env.example  .gitignore  README.md  config.example.toml  pyproject.toml
mattermost_crawler/: __init__.py  __main__.py  auth.py  channels.py  client.py  config.py  download.py  posts.py  profiles.py  sanitize.py
