[project]
name = "mattermost-crawler"
version = "0.1.0"
description = "Read-only crawler for a Mattermost instance: login, channel selection, download of all attachments."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "rich>=13.7",
]

[project.scripts]
mattermost-crawler = "mattermost_crawler.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mattermost_crawler*"]
